<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/countrydetails"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="econ.com.profile.CountryDetails">

    <TextView
        android:id="@+id/country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Country"
        android:layout_marginLeft="@dimen/standard_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        style="@style/Bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"

       />


    <TextView
        android:id="@+id/capital"
        android:layout_width="@dimen/zero_margin"
        android:layout_height="wrap_content"
        android:text="@string/capital"
        android:layout_marginLeft="@dimen/standard_margin"
        android:layout_marginTop="@dimen/view_vertical_margin"
        style="@style/BoldItalic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/country"/>

    <TextView
        android:id="@+id/capitaldesc"
        android:layout_width="@dimen/zero_margin"
        android:layout_height="wrap_content"
        android:text="@string/notavail"
        android:textAlignment="textEnd"
        android:layout_marginRight="@dimen/standard_margin"
        android:layout_marginTop="@dimen/view_vertical_margin"
        style="@style/Italics"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/country"/>

    <TextView
        android:id="@+id/population"
        android:layout_width="@dimen/zero_margin"
        android:layout_height="wrap_content"
        android:text="@string/population"
        android:layout_marginLeft="@dimen/standard_margin"
        android:layout_marginTop="@dimen/view_vertical_margin"
        style="@style/BoldItalic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/capital"/>

    <TextView
        android:id="@+id/populationdesc"
        android:layout_width="@dimen/zero_margin"
        android:layout_height="wrap_content"
        android:text="@string/notavail"
        android:textAlignment="textEnd"
        android:layout_marginRight="@dimen/standard_margin"
        android:layout_marginTop="@dimen/view_vertical_margin"
        style="@style/Italics"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/capital"/>

    <TextView
        android:id="@+id/area"
        android:layout_width="@dimen/zero_margin"
        android:layout_height="wrap_content"
        android:text="@string/area"
        android:layout_marginLeft="@dimen/standard_margin"
        android:layout_marginTop="@dimen/view_vertical_margin"
        style="@style/BoldItalic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/population"/>

    <TextView
        android:id="@+id/areadesc"
        android:layout_width="@dimen/zero_margin"
        android:layout_height="wrap_content"
        android:text="@string/notavail"
        android:textAlignment="textEnd"
        android:layout_marginRight="@dimen/standard_margin"
        android:layout_marginTop="@dimen/view_vertical_margin"
        style="@style/Italics"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/population"/>


    <TextView
        android:id="@+id/region"
        android:layout_width="@dimen/zero_margin"
        android:layout_height="wrap_content"
        android:text="@string/region"
        android:layout_marginLeft="@dimen/standard_margin"
        android:layout_marginTop="@dimen/view_vertical_margin"
        style="@style/BoldItalic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/area"/>

    <TextView
        android:id="@+id/regiondesc"
        android:layout_width="@dimen/zero_margin"
        android:layout_height="wrap_content"
        android:text="@string/notavail"
        android:textAlignment="textEnd"
        android:layout_marginRight="@dimen/standard_margin"
        android:layout_marginTop="@dimen/view_vertical_margin"
        style="@style/Italics"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/area"/>


    <TextView
        android:id="@+id/subregion"
        android:layout_width="@dimen/zero_margin"
        android:layout_height="wrap_content"
        android:text="@string/subregion"
        android:layout_marginLeft="@dimen/standard_margin"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginTop="@dimen/view_vertical_margin"
        style="@style/BoldItalic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/region"/>

    <TextView
        android:id="@+id/subregiondesc"
        android:layout_width="@dimen/zero_margin"
        android:textAlignment="textEnd"
        android:layout_height="wrap_content"
        android:text="@string/notavail"
        android:layout_marginRight="@dimen/standard_margin"
        android:layout_marginTop="@dimen/view_vertical_margin"
        style="@style/Italics"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/region"/>


</android.support.constraint.ConstraintLayout>